add variables to method search in paperSetList Component and 2 toggles buttons to filter cancel/validate actions display

--- a/client/src/app/modules/quotation/components/paper-set-list/paper-set-list.component.html
+++ b/client/src/app/modules/quotation/components/paper-set-list/paper-set-list.component.html
@@ -4,12 +4,18 @@
       <tr>
         <td>
           <generic-input [(model)]="textSearch" label="Rechercher" [form]="paperSetForm" propertyName="textSearch"
-            [isMandatory]="false" [isDisabled]="false" (onFormChange)="filterPaperSets()"></generic-input>
+            [isMandatory]="false" [isDisabled]="false" (onFormChange)="searchPaperSets()"></generic-input>
+        </td>
+        <td>
+          <generic-toggle [(model)]="isDisplayValidated" label="Afficher les actions validées ?" [form]="paperSetForm" propertyName="isDisplayValidated" [isDisabled]="false"> </generic-toggle>
+        </td>
+        <td>
+          <generic-toggle [(model)]="isDisplayCanceled" label="Afficher les actions annulées ?" [form]="paperSetForm" propertyName="isDisplayCanceled" [isDisabled]="false" ></generic-toggle>
         </td>
       </tr>
     </table>
-    <sort-table *ngIf="filteredPaperSetResults " [actions]="tableAction" [columns]="displayedColumns"
-      [displayTotalLines]="true" [values]="filteredPaperSetResults" tableName="Gestion des documents">
+    <sort-table *ngIf="paperSetResults " [actions]="tableAction" [columns]="displayedColumns"
+      [displayTotalLines]="true" [values]="paperSetResults" tableName="Gestion des documents">
     </sort-table>
   </div>
 </div>
