--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -113,8 +113,8 @@
             <td>
               <autocomplete-type-document [(model)]="assoServiceTypeDocument.typeDocument" [form]="entityForm"
                 [propertyName]="'typeDocument'+index" [isMandatory]="true" [isDisabled]="!editMode"
-                matTooltip="Seuls les types attachés à un Type de pièce jointe sont affichés" [onlyDisplayWithAttachm
-                entType]="true"></autocomplete-type-document>
+                matTooltip="Seuls les types attachés à un Type de pièce jointe sont affichés"
+                [onlyDisplayWithAttachmentType]="true"></autocomplete-type-document>
             </td>
             <td>
               <generic-toggle [(model)]="assoServiceTypeDocument.isMandatory" label="Est obligatoire ?"
@@ -143,8 +143,7 @@
             <td>
               <select-referential-service-field-type [(model)]="assoServiceFieldType.serviceFieldType"
                 [propertyName]="'serviceFieldType'+index" [form]="entityForm" [isMandatory]="true"
-                label="Libellé champ type"
-                [isDisabled]="!editMode">{{assoServiceFieldType.serviceFieldType.label}}</select-referential-service-field-type>
+                label="Libellé champ type" [isDisabled]="!editMode"></select-referential-service-field-type>
             </td>
             <td>
               <generic-toggle [(model)]="assoServiceFieldType.isMandatory" label="Est obligatoire ?" [form]="entityForm"
