--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -143,7 +143,8 @@
             <td>
               <select-referential-service-field-type [(model)]="assoServiceFieldType.serviceFieldType"
                 [propertyName]="'serviceFieldType'+index" [form]="entityForm" [isMandatory]="true"
-                label="Libellé champ type" [isDisabled]="!editMode"></select-referential-service-field-type>
+                label="Libellé champ type"
+                [isDisabled]="!editMode">{{displayLabel(assoServiceFieldType.serviceFieldType.dataType)}}</select-referential-service-field-type>
             </td>
             <td>
               <generic-toggle [(model)]="assoServiceFieldType.isMandatory" label="Est obligatoire ?" [form]="entityForm"
