correction model for possible values of fieldType 'Radio' (now 'Select') ; add front and back to create/modify instanciated and referential service/fieldType/select

--- a/client/src/app/modules/administration/components/referentials/referential-service-field-type/referential-service-field-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service-field-type/referential-service-field-type.component.html
@@ -37,8 +37,8 @@
           <tr>
             <td>
               <select-service-field-data-type [(model)]="selectedEntity.dataType" label="Type de données"
-                [form]="entityForm" propertyName="dataType" [isMandatory]="true"
-                [isDisabled]="!editMode"></select-service-field-data-type>
+                [form]="entityForm" propertyName="dataType" [isMandatory]="true" [isDisabled]="!editMode"
+                (selectionChange)="clearPossibleValues()"></select-service-field-data-type>
             </td>
           </tr>
         </table>
