Final corrections for Services, add duplicate button for provision; CustomOrdercomment corrections (to be tested)

--- a/client/src/app/modules/administration/components/referentials/referential-attachment-type/referential-attachment-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-attachment-type/referential-attachment-type.component.html
@@ -62,6 +62,13 @@
                 [form]="entityForm" propertyName="isHiddenFromUser"></generic-toggle>
             </td>
           </tr>
+          <tr>
+            <td>
+          <tr>
+            <td *ngIf="selectedEntity && selectedEntity.id">
+
+            </td>
+          </tr>
         </table>
       </fieldset>
     </div>
