--- a/client/src/app/modules/quotation/components/provision/provision.component.html
+++ b/client/src/app/modules/quotation/components/provision/provision.component.html
@@ -93,7 +93,7 @@
           <mat-panel-description *ngIf="editMode">
             <mat-icon color="accent" matTooltip="Dupliquer la prestation"
               (click)="duplicateProvision(service,provision)" class="pointer">
-              duplicate</mat-icon>
+              content_copy</mat-icon>
           </mat-panel-description>
         </mat-expansion-panel-header>
         <provision-item [quotation]="asso.customerOrder?asso.customerOrder:asso.quotation"
