--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -200,7 +200,7 @@
                                   delete</mat-icon>
                                 <mat-icon color="accent" *ngIf="editMode" matTooltip="Dupliquer la prestation"
                                   (click)="duplicateProvision(service,provision)" class="pointer">
-                                  copy</mat-icon>
+                                  content_copy</mat-icon>
                               </mat-panel-description>
                             </mat-expansion-panel-header>
                             <provision-item [quotation]="quotation" *ngIf="asso.affaire && asso.affaire.id"
