--- a/client/src/app/modules/quotation/components/service/service.component.html
+++ b/client/src/app/modules/quotation/components/service/service.component.html
@@ -99,7 +99,7 @@
           <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_SELECT">
             <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
               [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-              [propertyName]='"radioFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
+              [propertyName]='"selectFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
               [isMandatory]="assoServiceFieldType.isMandatory"
               [isDisabled]="!editMode"></select-value-service-field-type>
           </td>
